# lemonfox-transkriptor-gui

./: .gitignore  README.md  api-docs.md  pyproject.toml
.github/workflows/: build-windows.yml
lemonfox_gui/: __init__.py  __main__.py  api_client.py  audio.py  settings.py  ui.py
